--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Did your NFL Team Win?</title>
+    <link rel="stylesheet" href="./dist/css/style.css">
   </head>
   <body>
 
@@ -14,7 +15,7 @@
 
     <div id="results"></div>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="./dist/js/bundle.js"></script>
 
   </body>
 </html>
