settimeout for loader result

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
       <div class="hero__content wrapper">
         <h1 class="hero__title">Did Your NFL Team Win?</h1>
-        <p class="hero__subtitle">Check if your NFL team won. Enter your team's
+        <p>Check if your NFL team won. Enter your team's
           name below:</p>
         <input id="search" type="text" placeholder="Enter an NFL Team Name. Ex -
           'Jaguars'">
         <a id="btn-search" class="btn btn--block">Search</a>
-        <div class="loading-result">
+        <div id="loading" class="loading-result">
           <span class="loader loader-bars"><span> </span></span>
           <span class="loading-text">Checking scores...</span>
         </div><!--/.loading-result-->
