--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <section class="hero hero--full-height hero--bg-gradient">
+    <section class="hero hero--has-overlay hero--full-height">
 
       <div class="hero__content wrapper">
         <h1 class="hero__title">Did Your NFL Team Win?</h1>
